[gd_scene load_steps=4 format=3 uid="uid://chwbpf00sk5mc"]

[ext_resource type="Script" uid="uid://cqqkqxntjf6ke" path="res://Scripts/UIs/load_game.gd" id="1_dptoq"]
[ext_resource type="Theme" uid="uid://c7k57134accys" path="res://Resources/Themes/main_menu_buttons.theme" id="2_8hc8v"]
[ext_resource type="PackedScene" uid="uid://562d6x481l84" path="res://Scenes/UIs/Transation/feed_effect.tscn" id="4_t8kub"]

[node name="LoadGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_dptoq")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.282353, 0.352941, 1)

[node name="GoBack" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 152.0
offset_bottom = 120.0
mouse_default_cursor_shape = 2
theme = ExtResource("2_8hc8v")
text = "<"
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -744.0
offset_right = 400.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 65
alignment = 1

[node name="Slot1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_8hc8v")
text = "Slot 1"

[node name="Slot2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_8hc8v")
text = "Slot 2"

[node name="Slot3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_8hc8v")
text = "Slot 3"

[node name="FeedEffect" parent="." instance=ExtResource("4_t8kub")]
visible = false
inStarting = false

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="GoBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot3" to="." method="_on_slot_3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
